--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>WeatherApp</h1>
+        <h1>Weather-App</h1>
         <form>
             <label for="name">City:</label>
             <input type="text" id="name" name="name" required>
